Update leon.css letterspacing fix

--- a/css/leon.css
+++ b/css/leon.css
@@ -91,11 +91,12 @@ body {
 @media (max-width: 767px) {
     .special-heading {
         font-size: 70px;
+        margin: 0;
     }
     .special-heading+p {
         margin: -20px 0 0;
         font-size: 15px;
-        letter-spacing: -1;
+        letter-spacing: -2px;
     }
 }
 
